OrderService: ajustes menores
Co-authored-by: Cursor <cursoragent@cursor.com>